--- a/gnn_tutorial.ipynb
+++ b/gnn_tutorial.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using backend: pytorch\n"
+     ]
+    }
+   ],
    "source": [
     "import dgl\n",
     "import numpy as np\n",
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +65,10 @@
       "       32, 32, 32, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33, 33,\n",
       "       33, 33, 33]))\n",
       "we have 34 nodes.\n",
-      "we have 156 edges.\n"
+      "we have 156 edges.\n",
+      "Graph(num_nodes=34, num_edges=156,\n",
+      "      ndata_schemes={}\n",
+      "      edata_schemes={})\n"
      ]
     },
     {
@@ -72,7 +83,8 @@
    "source": [
     "G = build_karate_club_graph()\n",
     "print('we have %d nodes.' % G.number_of_nodes())\n",
-    "print('we have %d edges.' % G.number_of_edges())"
+    "print('we have %d edges.' % G.number_of_edges())\n",
+    "print(G)"
    ]
   },
   {
